Replacing toList() with Collectors.toList()